# tetris

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  compile_commands.json  game.cpp  game.h  input_handler.cpp  main.cpp  renderer.cpp  renderer.h  test.cpp  tetris  tetromino.cpp  tetromino.h
include/: Bag7.h  Constants.h  CustomTypes.h  Game.h  GameBuilder.h  Grid.h  Hud.h  HudBuilder.h  InputHandler.h  Logger.h  Mino.h  Renderer.h  bag7.h  constants.h  game.h  grid.h  input_handler.h  renderer.h
libs/SDL3_ttf/include/SDL3_ttf/: SDL_textengine.h  SDL_ttf.h
libs/SDL3_ttf/lib/arm64/: SDL3_ttf.lib
src/: HudBuilder.cpp  HudBuilder.h  InputHandler.cpp  Mino.cpp  Mino.h  bag7.cpp  bag7.h  constants.h  custom_types.h  game.cpp  game.h  grid.cpp  grid.h  hud.cpp  hud.h  input_handler.cpp  input_handler.h  main.cpp  renderer.cpp  renderer.h  tetromino.cpp  tetromino.h
